Archive2/18/10df35260e0d87/output
+ g++ -std=c++1y -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:25:36: error: aggregate 'TD<std::tuple<Filter<5, 10>, Filter<10, 25>, Filter<25, 15> > > t' has incomplete type and cannot be defined
     TD<Chain<5, 10, 25, 15>::type> t;    
                                    ^
+ clang++ -std=c++1y -O2 -Wall -pedantic -pthread main.cpp
main.cpp:25:36: error: implicit instantiation of undefined template 'TD<std::tuple<Filter<5, 10>, Filter<10, 25>, Filter<25, 15> > >'
    TD<Chain<5, 10, 25, 15>::type> t;    
                                   ^
main.cpp:22:23: note: template is declared here
template<class> class TD;
                      ^
1 error generated.
